# cimgtool

./: .ccls  .clang-format  .envrc  .gitignore  .lvimrc  CMakeLists.txt  README.md  justfile
cmake/: FindVips.cmake  config_h.cmake
src/: debug.c  debug.h  main.c
